[tool.poetry]
name = "sistemareserva"
version = "0.1.0"
description = ""
authors = ["Delcor <matheusdelcorbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.5"
motor = "^3.6.0"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
